tests/bugs/faulty_int_division_632.sy
start :: fn do
    b: int = 1 / 2
end

// error: A 'int' cannot be a 'float'

